adding new colors.

--- a/src/Sidebar/Sidebar/Style.scss
+++ b/src/Sidebar/Sidebar/Style.scss
@@ -5,7 +5,16 @@
     font-family: $primary-font-family;
 }
 
-.sidebar-brand, .sidebar-heading, .nav-item {
+.nav-item {
+    color: $primary-color;
+    transition: background-color 0.5s ease;
+    &:hover {
+        color: $third-color;
+        background-color: $primary-bg-color;
+    }
+}
+
+.sidebar-brand {
     color: $primary-color;
     &:hover {
         color: $light-color;
