--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,10 +1,10 @@
-$primary-color: #000 !default;
-$primary-color-lighter: #332E33 !default;
-$primary-color-light: #4D4D4D !default;
-$secondary-color: #ffc709 !default;
-$secondary-color-lighter: #FFD857 !default;
-$third-color: $primary-color !default;
-$primary-font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif !default;
+$primary-color: #333 !default;
+$primary-color-lighter: #474747 !default;
+$primary-color-light: #5B5B5B !default;
+$secondary-color: #f4d010 !default;
+$secondary-color-lighter: #F6D93F !default;
+$third-color: red !default;
+$primary-font-family: "Roboto",sans-serif !default;
 
 $primary-bg-color: white;
 
