--- a/src/Table/TableWithEditButtons/Style.scss
+++ b/src/Table/TableWithEditButtons/Style.scss
@@ -1,8 +1,8 @@
 @import '../../styles/variables';
 
 table > thead {
-    background-color: $primary-color;
-    color: $light-color;
+    background-color: $light-color2;
+    color: $primary-color;
 }
 
 table, .table-bordered, .table-bordered > tbody > tr > td, .table-bordered > tbody > tr > th, .table-bordered > tfoot > tr > td, .table-bordered > tfoot > tr > th, .table-bordered > thead, .table-bordered > thead > tr > td, .table-bordered > thead > tr > th {
