--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,3 +9,6 @@ $primary-font-family: "Roboto",sans-serif !default;
 $primary-bg-color: white;
 
 $light-color: white;
+$light-color2: #f0f0f0;
+
+$topbar-base-height: 70px;
