--- a/src/Sidebar/Sidebar/Style.scss
+++ b/src/Sidebar/Sidebar/Style.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables';
+@import '../../../../blue-admin-vue-components/src/Sidebar/Sidebar/Style.scss';
 
 .sidebar-bg-gradient {
     background: $secondary-color;
@@ -14,37 +15,40 @@
     }
 }
 
-.sidebar-brand {
-    color: $primary-color;
-    &:hover {
-        color: $light-color;
-    }
-}
-
 hr.sidebar-divider {
-    border-top: 1px solid $primary-color;
+    border-top: 1px solid $secondary-color-lighter;
+    margin: 0 0 0 1rem;
 }
 
 .sidebar {
     background-color: $secondary-color;
-    border-right: $secondary-color 1px solid;
     &.toggled {
-    
-        #sidebarToggle::after {
-            color: $primary-color-light;
+        #sidebarToggle {
+            &::after {
+                color: $light-color;
+                opacity: 1;
+            }
+            &:hover {
+                color: $primary-color;
+                background-color: $primary-color-lighter;
+                opacity: 1;
+            }
         }
     }
 }
 
 #sidebarToggle {
     background-color: $primary-color;
+    opacity: 1;
 
     &::after {
-        color: $primary-color-light;
+        color: $light-color;
+        opacity: 1;
     }
 
     &:hover {
-        background-color: $light-color;
+        background-color: $primary-color-lighter;
+        opacity: 1;
     }
 
     &:focus {
