--- a/src/Table/CreateButton/Style.scss
+++ b/src/Table/CreateButton/Style.scss
@@ -1,9 +1,9 @@
 @import '../../styles/variables';
 
 .btn-create {
-    color: $light-color;
-    background-color: $primary-color;
+    color: $primary-color;
+    background-color: $secondary-color;
     &:hover {
-        color: $light-color;
+        color: $primary-color;
     }
 }
